# json_api

./: Cargo.toml
actix/: Cargo.toml
actix/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/resource/: mod.rs
core/src/resource/identifier_object/: mod.rs
core/src/resource/object/: mod.rs
derive/: Cargo.toml
derive/src/context/: mod.rs
examples/actix_web/: Cargo.toml
examples/actix_web/src/: main.rs
json_api/: Cargo.toml
json_api/src/: lib.rs
json_api/src/json_api/: mod.rs
json_api/src/json_api/data/: mod.rs
json_api/src/link/: mod.rs
json_api/src/meta/: mod.rs
json_api/src/relationship/: mod.rs
json_api/src/resource/: mod.rs
json_api/src/resource/identifier_object/: mod.rs
json_api/src/resource/object/: mod.rs
json_api_actix/: Cargo.toml
json_api_actix/src/: lib.rs
json_api_derive/: Cargo.toml
json_api_derive/src/: lib.rs
json_api_derive/src/context/: mod.rs  symbol.rs
json_api_rust/: Cargo.toml
json_api_rust/src/: lib.rs
json_api_rust/src/error/: mod.rs
json_api_test/: Cargo.toml
json_api_test/src/: lib.rs
src/: lib.rs
src/data/: mod.rs
src/data/kind/: mod.rs
src/data/resource/: mod.rs
src/data/resource/identifier_object/: mod.rs
src/data/resource/object/: mod.rs
src/json_api/: mod.rs
src/json_api/builder/: mod.rs
test/: Cargo.toml
