[package]
name = "j-api-actix"
version = "0.1.0"
authors = ["Zach LeBlanc <zachleb112@gmail.com>"]
edition = "2018"
description = "Json api implementation"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j-api = { path = "../core", version = "0.1.0", features = ["derive"] }
actix-web = "2.0"
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"