[package]
name = "actix_web"
version = "0.1.0"
authors = ["Zach LeBlanc <zachleb112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j-api = { path = "../../core"}
j-api-actix = { path = "../../actix" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "2.0"
actix-rt = "1.0"